[project]
name = "mmm-workflow-automation"
version = "0.1.0"
description = "MMM project using PyMC"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pymc (>=5.27.1,<6.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (<3)",
    "numpy (>=2.4.2,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "arviz (>=0.23.4,<0.24.0)",
    "pandera (>=0.29.0,<0.30.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.5.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
